--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,35 @@
-@InProceedings{Gebser,
-  author   = {M. Gebser and R. Kaminski and B. Kaufmann and T. Schaub},
-  title    = {\textit{Clingo} = {ASP} + Control: Preliminary Report},
-  volume   = {arXiv:1405.3694v1},
-  crossref = {Leuschel2014},
-  optnote  = {Available at \url{http://arxiv.org/abs/1405.3694v1}},
+@book{abp,
+  title={Aprendizagem baseada em projetos: educa{\c{c}}{\~a}o diferenciada para o s{\'e}culo XXI},
+  author={Bender, Willian N},
+  year={2015},
+  publisher={Penso Editora}
 }
+@misc{fairchild,
+  author = 	 {FAIRCHING SEMICONDUCTOR},
+  title = {Medium Power Linear Switching Applications},
+  howpublished = "\url{http://pdf.datasheetcatalog.com/datasheet/fairchild/TIP122.pdf}",
+  year = {2018}, 
+  note = "[Online; acessado em 26 de junho de 2018]"
+}
+@misc{robo1,
+  author = 	 {FILHO, M. S. and SANTOS, C. O. and CARMO, J. R. C. and JUCÁ, S. C. S. and OLIVEIRA, A. T. and PEREIRA, R. I. S.},
+  title = {Robótica Educacional com Material Reciclável: A Inserção de Tecnologia em Baixo Custo nas Escolas Públicas do Ceará},
+  howpublished = "\url{http://sistemaolimpo.org/midias/uploads/78b8e0e65c68015697543e14252c755f.pdf}",
+  year = {2012}, 
+  note = "[Online; acessado em 20 de junho de 2018]"
+}
+@misc{robo2,
+  author = 	 {GUIMARÃES, C. and MAURER, H.},
+  title = {EduBOT: Protótipo de uma plataforma robótica para educação através da Metarreciclagem},
+  howpublished = "\url{http://www.santoangelo.uri.br/stin/Stin/trabalhos/12.pdf}",
+  year = {2018}, 
+  note = "[Online; acessado em 26 de junho de 2018]"
+}
+@misc{robo3,
+  author = 	 {SOUSA, A. J. and JUNIOR, M. H. and HENNING, M.},
+  title = {A Robótica como Ferramenta de Ensino e Aprendizagem de Matemática no Ensino Médio},
+  howpublished = "\url{http://www.sodebras.com.br/edicoes/n111.pdf}",
+  year = {2015}, 
+  note = "[Online; acessado em 18 de julho de 2018]"
+}
+
